src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html,
body,
#root {
  height: 100%;
  scroll-behavior: smooth;
}

/* Scroll style */
::-webkit-scrollbar {
  width: 0px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background-color: transparent;
}

*:hover::-webkit-scrollbar-thumb,
*:focus::-webkit-scrollbar-thumb {
  background-color: #00000080;
  border-radius: 5px;
  border: 2px solid transparent;
  background-clip: content-box;
}

/* Scroll style */

/* Landing page and top nav gradient */
.signInGradient:after {
  content: '';
  background: linear-gradient(269deg, #f448ab 24.22%, #7968ff 100%);
  position: fixed;
  width: 100%;
  top: 0;
  left: calc(50% - 50px);
  height: 100%;
  transform: skewX(-10deg);
  z-index: -1;
  border-left: 50px solid #2d2169;
}

.bannerSkewY {
  transform: translate(0px, -255px) skewY(-15deg);
  border-bottom: 50px solid #2d2169;
  height: 150%;
  min-height: 1200px;
  bottom: calc(100% - 820px);
}

.landingInGradient {
  overflow: hidden;
  position: absolute;
  display: block;
  width: 100%;
  z-index: 0;
  background: linear-gradient(180deg, #ea7c8f 50%, #9e65e8 100%);
}

.staticMenuGradient.MuiAppBar-root {
  overflow: hidden;
  z-index: 100;
  background: transparent;
}

.staticMenuGradient .MuiContainer-root .MuiToolbar-root {
  z-index: 100;
  padding: 15px 0;
}

.landingInGradient:after {
  content: '';
  background-image: linear-gradient(
    129deg,
    #ea7c8f,
    #ea7c8f,
    #e67cc1,
    #9e65e8,
    #9e65e8
  );
  position: absolute;
  width: 100%;
  height: 820px;
  bottom: 0;
}

.landingInGradient:before {
  content: '';
  background-image: radial-gradient(#db3a8a, transparent 60%);
  position: absolute;
  width: 70%;
  height: 1220px;
  z-index: 1;
  bottom: 0;
  transform: translate(-180px, 60px);
}

.landingInGradientShades:before {
  content: '';
  background-image: linear-gradient(180deg, transparent 40%, #af77f7 90%);
  position: absolute;
  width: 100%;
  height: 820px;
  z-index: 2;
  transform: translate(0px, 110px);
  bottom: 0;
}

@media (max-width: 768px) {
  .landingInGradient.bannerSkewY {
    height: 1070px;
    bottom: calc(100% - 1030px);
  }

  .landingInGradientShades::before,
  .landingInGradientShades::after,
  .landingInGradient::before,
  .landingInGradient::after {
    height: 1070px;
  }
}

/* Landing page and top nav gradient */

/* Card background */
.blueGradientBG {
  background-image: linear-gradient(
    135.04deg,
    #6151b0 -0.87%,
    #42328c 46.6%
  ) !important;
  background-color: transparent !important;
}

/* Card background */

.popper-card-arrow:before {
  position: absolute;
  content: '';
  border: 15px solid #42328c;
  display: block;
  transform: translate(-50%, 0);
  left: 50%;
  z-index: 10;
  transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-color: transparent transparent #42328c transparent;
  top: -30px;
}

.blueSectionLandingBg {
  position: relative;
}

.blueSectionLandingBg:before {
  content: '';
  border-top: 50px solid #2d2169;
  border-bottom: 50px solid #2d2169;
  transform: skewY(-15deg);
  position: absolute;
  top: -200px;
  height: calc(100% + 60px);
  width: 100%;
  background: #271d5a;
  z-index: -1;
}

@media only screen and (max-width: 726px) {
  .blueSectionLandingBg:before {
    top: -100px;
    height: calc(100% + 0px);
  }
}

@media only screen and (min-width: 1200px) {
  .serviceCardWrap {
    transform: translateY(0%);
    transition: 0.5s ease transform;
  }

  .serviceCardWrap.active:nth-child(odd) {
    transform: translateY(-50px);
  }

  .serviceCardWrap.active:nth-child(even) {
    transform: translateY(50px);
  }
}

.buyNowContainer {
  bottom: 0;
  left: 0;
  z-index: 10;
  position: relative;
  box-shadow: 0px 0px 70px rgb(39 29 90) !important;
}

.buyNowContainerSticky {
  position: fixed;
  animation: transition 0.3s linear;
}

.wizardCard:hover {
  background: linear-gradient(#e06479, #d34aa3) !important;
  box-shadow: 0px 30px 70px rgb(0 0 0 / 10%) !important;
  cursor: pointer;
}
.nav-link {
  position: relative;
}
.nav-link::before,
.nav-link::before {
  content: '';
  position: absolute;
  display: block;
  width: calc(100% + 20px);
  height: 2px;
  bottom: -3px;
  left: -10px;
  background-color: #ffffff;
  transform: scaleX(0);
  transition: transform 0.3s ease-in;
}

.nav-link:hover::before,
.nav-link.active::before {
  transition: transform 0.3s ease-in 0.3s;
  transform: scaleX(1);
}
.hover-nft-button-container {
  position: relative;
  overflow: hidden;
}
.hover-nft-button {
  display: none !important;
  transition: height 0.3s ease-in-out;
}
.nft-container .hover-nft-button-container:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0.2;
  background-image: url('./assets/overlay_logo.svg');
}
.nft-container:hover .hover-nft-button {
  display: inline !important;
  position: absolute;
  bottom: 0;
}

